uploading many changes; messy development stage

--- a/TNN_Total_n00b_Notebook.ipynb
+++ b/TNN_Total_n00b_Notebook.ipynb
@@ -622,6 +622,286 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the 6x6 Wreath Puzzle\n",
+    "\n",
+    "### Initial Steps\n",
+    "\n",
+    "I'm now turning my attention to the **6x6 Wreath Puzzle**, as it appears to be one of the more approachable challenges. My initial focus will be on two key aspects:\n",
+    "\n",
+    "1. **Loading Puzzles**: Understanding how to import or load puzzles into my working environment. This is the first step in interacting with the puzzle data.\n",
+    "\n",
+    "2. **Loading Available Moves**: Figuring out how to access and comprehend the set of possible moves. This is crucial for devising strategies to solve the puzzle.\n",
+    "\n",
+    "### Visualization and Strategy Development\n",
+    "\n",
+    "- Once the puzzles and moves are loaded, the next step will be to explore ways to **visualize the wreath puzzle**. Visualization is a powerful tool to keep track of the moves and to understand the state of the puzzle at any given moment.\n",
+    "\n",
+    "- Additionally, visualization will aid in **evaluating the distance to the solution**. By having a clear picture of the puzzle's current state, I can better assess how close I am to solving it and adjust my strategies accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# local data_dir\n",
+    "data_dir = Path(\"data\")\n",
+    "\n",
+    "puzzle_info = pd.read_csv(data_dir / 'puzzle_info.csv', index_col='puzzle_type')\n",
+    "# Parse allowed_moves\n",
+    "puzzle_info['allowed_moves'] = puzzle_info['allowed_moves'].apply(literal_eval)\n",
+    "\n",
+    "puzzles_all = pd.read_csv(data_dir / 'puzzles.csv', index_col='id')\n",
+    "# Parse color states\n",
+    "puzzles_all = puzzles_all.assign(\n",
+    "    initial_state=lambda df: df['initial_state'].str.split(';'),\n",
+    "    solution_state=lambda df: df['solution_state'].str.split(';')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['l', 'r']\n"
+     ]
+    }
+   ],
+   "source": [
+    "wreath_6_6_info = puzzle_info.loc['wreath_6/6', 'allowed_moves']\n",
+    "# convert keys from wreath_6_6_info to a list\n",
+    "wreath_6_6_moves = list(wreath_6_6_info.keys())\n",
+    "print(wreath_6_6_moves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'l': [1, 2, 3, 4, 5, 0, 6, 7, 8, 9], 'r': [6, 1, 8, 3, 4, 5, 7, 2, 9, 0]}\n",
+      "    puzzle_type                  solution_state  \\\n",
+      "id                                                \n",
+      "284  wreath_6/6  [C, A, C, A, A, A, B, B, B, B]   \n",
+      "285  wreath_6/6  [C, A, C, A, A, A, B, B, B, B]   \n",
+      "286  wreath_6/6  [C, A, C, A, A, A, B, B, B, B]   \n",
+      "287  wreath_6/6  [C, A, C, A, A, A, B, B, B, B]   \n",
+      "288  wreath_6/6  [C, A, C, A, A, A, B, B, B, B]   \n",
+      "\n",
+      "                      initial_state  num_wildcards  \n",
+      "id                                                  \n",
+      "284  [A, A, A, A, B, C, B, C, B, B]              0  \n",
+      "285  [B, A, B, A, B, A, C, A, B, C]              2  \n",
+      "286  [A, B, C, A, A, C, B, B, B, A]              2  \n",
+      "287  [B, C, B, C, A, A, B, A, B, A]              2  \n",
+      "288  [A, A, C, B, C, A, B, B, A, B]              0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extracting info for 'wreath_6/6' puzzles\n",
+    "wreath_6_6_moves_dict = puzzle_info.loc['wreath_6/6', 'allowed_moves']\n",
+    "moves = list(wreath_6_6_moves_dict.keys())\n",
+    "\n",
+    "wreath_6_6_puzzles = puzzles_all[puzzles_all['puzzle_type'] == 'wreath_6/6']\n",
+    "# get a list of loc indices for wreath_6/6 puzzles\n",
+    "wreath_6_6_idx = wreath_6_6_puzzles.index.tolist()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Now you can access the allowed moves for 'wreath_6/6' using the dictionary\n",
+    "# For example:\n",
+    "print(allowed_moves_dict['wreath_6/6'])\n",
+    "\n",
+    "# And you have the wreath_6_6_puzzles DataFrame containing all puzzles of this type\n",
+    "print(wreath_6_6_puzzles.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenges in Visualizing the Puzzle\n",
+    "\n",
+    "### Current Approach\n",
+    "\n",
+    "The current code is designed to visualize the puzzle as two rings (left and right), each with the capability of independent rotation, and sharing two common points. This model attempts to reflect the mechanics of the puzzle's movement.\n",
+    "\n",
+    "### Issues Encountered\n",
+    "\n",
+    "However, upon closer examination of the permutations `l` and `r`, several discrepancies have emerged:\n",
+    "\n",
+    "- **L-Permutation Complexity**:\n",
+    "  - The `l-permutation` seems to only affect the early elements in the puzzle. This observation suggests a simpler pattern of movement than initially thought.\n",
+    "\n",
+    "- **R-Permutation Complexity**:\n",
+    "  - Conversely, the `r-permutation` appears to induce more complex changes. These changes aren't adequately represented by the current model of two independently rotating rings with two shared points.\n",
+    "\n",
+    "### Next Steps\n",
+    "\n",
+    "- At this point, the path forward for the visualization is unclear. The simplistic model does not capture the intricacies revealed by the permutations.\n",
+    "- A deeper analysis or a different approach to modeling might be necessary to develop a more accurate visualization of the puzzle dynamics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial State:\n",
+      "   A   A      C   B\n",
+      "A         C          B\n",
+      "     l          r\n",
+      "B         B          A\n",
+      "   C   B     C  B\n",
+      "---------------------------------------------\n",
+      "Solution State:\n",
+      "   A   C      B   B\n",
+      "C         A          B\n",
+      "     l          r\n",
+      "A         B          A\n",
+      "   A   B     B  B\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_wreath_puzzle(state):\n",
+    "    \"\"\"\n",
+    "    Print a text-based visualization of the wreath_6/6 puzzle.\n",
+    "\n",
+    "    :param state: List representing the state of each point on the wreath puzzle (10 elements).\n",
+    "    \"\"\"\n",
+    "    # Ensuring the state has 10 elements\n",
+    "    if len(state) != 10:\n",
+    "        raise ValueError(\"State must have 10 elements.\")\n",
+    "\n",
+    "    # Constructing the layout\n",
+    "    # Note: Points at index 5 and 6 are the common points between the two rings\n",
+    "\"\"\"     layout = [\n",
+    "        f\"   {state[1]}   {state[2]}      {state[7]}   {state[8]}\",\n",
+    "        f\"{state[0]}         {state[5]}          {state[9]}\",\n",
+    "        \"     l          r\",\n",
+    "        f\"{state[4]}         {state[6]}          {state[3]}\",\n",
+    "        f\"   {state[5]}   {state[6]}     {state[7]}  {state[8]}\"\n",
+    "    ] \"\"\"\n",
+    "\n",
+    "    layout = [\n",
+    "        f\"         {state[4]}      {state[7]}   {state[8]}\",\n",
+    "        f\"{state[3]}         {state[5]}          {state[9]}\",\n",
+    "        \"     l          r\",\n",
+    "        f\"{state[2]}         {state[6]}          {state[3]}\",\n",
+    "        f\"   {state[0]}   {state[6]}     {state[7]}  {state[8]}\"\n",
+    "    ]\n",
+    "\n",
+    "    # Printing the layout\n",
+    "    for line in layout:\n",
+    "        print(line)\n",
+    "\n",
+    "# get first puzzle index\n",
+    "idx = wreath_6_6_idx[0]\n",
+    "puzzle_initial = wreath_6_6_puzzles.loc[idx, 'initial_state']\n",
+    "puzzle_solution = wreath_6_6_puzzles.loc[idx, 'solution_state']\n",
+    "\n",
+    "print(\"Initial State:\")\n",
+    "print_wreath_puzzle(puzzle_initial)\n",
+    "print(f\"{'-'*45}\\nSolution State:\")\n",
+    "print_wreath_puzzle(puzzle_solution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial State list:\n",
+      "['A', 'A', 'A', 'A', 'B', 'C', 'B', 'C', 'B', 'B']\n",
+      "---------------------------------------------\n",
+      "Initial State:\n",
+      "   A   A      C   B\n",
+      "A         C          B\n",
+      "     l          r\n",
+      "B         B          A\n",
+      "   C   B     C  B\n",
+      "---------------------------------------------\n",
+      "After l move:\n",
+      "['A', 'A', 'A', 'B', 'C', 'A', 'B', 'C', 'B', 'B']\n",
+      "---------------------------------------------\n",
+      "   A   A      C   B\n",
+      "A         A          B\n",
+      "     l          r\n",
+      "C         B          B\n",
+      "   A   B     C  B\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start turning the puzzle with a call to l\n",
+    "puzzle_state = puzzle_initial.copy()\n",
+    "l = Permutation(wreath_6_6_moves_dict['l'])\n",
+    "r = Permutation(wreath_6_6_moves_dict['r'])\n",
+    "\n",
+    "print('Initial State list:')\n",
+    "print(puzzle_state)\n",
+    "print(f\"{'-'*45}\")\n",
+    "print(\"Initial State:\")\n",
+    "print_wreath_puzzle(puzzle_state)\n",
+    "print(f\"{'-'*45}\")\n",
+    "puzzle_state = l(puzzle_state)\n",
+    "print(\"After l move:\")\n",
+    "print(puzzle_state)\n",
+    "print(f\"{'-'*45}\")\n",
+    "print_wreath_puzzle(puzzle_state)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reassessing the Approach to the Wreath Puzzle\n",
+    "\n",
+    "### Decision on Visualization\n",
+    "\n",
+    "After considering the challenges and complexities mentioned earlier, I have decided to **abandon the attempt to create a visualization** for the wreath puzzle. The intricacies involved in accurately representing the puzzle's movements exceed the capabilities of the simplistic model initially proposed.\n",
+    "\n",
+    "### Exploring Heuristic Approaches for Solving the Puzzle\n",
+    "\n",
+    "In lieu of visualization, my focus shifts toward identifying an effective heuristic method for solving the puzzle:\n",
+    "\n",
+    "- **Potential Search Algorithms**:\n",
+    "  - Preliminary research suggests that algorithms like **A\\* (A-Star)** or **Greedy Best-First Search** might be suitable starting points.\n",
+    "\n",
+    "- **Considering Heuristic Options**:\n",
+    "  - Two heuristic approaches under consideration are the **Hamming distance** and the **Manhattan distance**.\n",
+    "  - **Hamming Distance**: This method involves counting the number of positions in which the current state differs from the solution state. It's seemingly the more straightforward approach.\n",
+    "  - **Manhattan Distance**: Calculating the Manhattan distance appears to be more challenging and potentially less feasible for this specific problem.\n",
+    "\n",
+    "### Moving Forward\n",
+    "\n",
+    "The next steps will involve a deeper exploration into these heuristic methods, assessing their suitability and efficacy in tackling the wreath puzzle's complexities.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
